--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets\plugins\node_modules\bootstrap\dist\css\bootstrap.min.css">
-    <title>Mario Somodi | Home</title>
-</head>
-<body>
-    <canvas id="canvas"></canvas>
-    <script src="assets\plugins\node_modules\jquery\dist\jquery.min.js"></script>
-    <script src="assets\plugins\node_modules\popper.js\dist\umd\popper.min.js"></script>
-    <script src="assets\plugins\node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
-    <script src="js/trail.js"></script>
-    <script src="js/app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./favicon red.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio | Mario Šomođi</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
